<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="editor_insert_item_successful">Item saved</string>

    <string name="editor_insert_item_failed">Error with saving item</string>

    <string name="editor_update_item_successful">Item updated</string>

    <string name="editor_update_item_failed">Error with updating item</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_item_successful">Item deleted</string>

    <string name="editor_delete_item_failed">Error with deleting item</string>

    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="quantity_overview">Overview</string>

    <string name="store_category_label">In Store</string>

    <string name="hint_item_name">Name</string>

    <string name="hint_item_price">Price</string>

    <string name="add_new_item_title">Add Item</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="sale_button">Sale</string>
    <string name="default_quantity">1</string>
    <string name="other_info_category_label">Other Info</string>
    <string name="order_more_button">Order More..</string>
    <string name="hint_item_supplier">Supplier</string>
    <string name="currency">€</string>
</resources>
